--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -4,6 +4,7 @@ html {
 
 body {
     margin-bottom: 100px;
+    margin-top: 30px;
 }
 
 
@@ -45,6 +46,7 @@ footer p {
     font-size: 1em;
 
 }
+
 
 
 
